# evacubana

./: Dockerfile  README.md  celery.Dockerfile  pyproject.toml
app/: main.py
app/configuration/: config.py  db.py
app/domain/: games.py  islands.py
app/domain/models/: game.py  island.py  note.py  score.py
app/repository/: games.py  islands.py
app/router/: games.py  islands.py
app/service/: islands.py  islands_service.py  process_islands.py
app/worker/: task.py
